build: :heavy_plus_sign: replace spring-boot-starter maven dependency with spring-boot-starter-web

--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,14 @@
 	<artifactId>deltadentalghasassigmnet</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>deltadentalghasassigmnet</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Demo project for Delta Dental GHAS Interview</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
