--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -16,3 +16,9 @@ jobs:
       # contents: read
       # actions: write
       security-events: write
+
+    strategy:
+      # fail-fast is true by default, but it's included here for demonstration purposes and request for explicit notation from the interviewer
+      fail-fast: true
+      matrix:
+        language: [ 'java-kotlin', 'javascript-typescript' ]
