ci: :construction_worker: add repo checkout and initialize code-ql with language value passed in through matrix

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -22,3 +22,13 @@ jobs:
       fail-fast: true
       matrix:
         language: [ 'java-kotlin', 'javascript-typescript' ]
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: ${{ matrix.language }}
+
+
