fix: :green_heart: change mvn build to mvn package

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -39,4 +39,4 @@ jobs:
 
       - if: matrix.language == 'java-kotlin'
         name: Build project
-        run: ./mvnw build
+        run: ./mvnw package
