--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -38,5 +38,14 @@ jobs:
       # more control over the build process.
 
       - if: matrix.language == 'java-kotlin'
+        name: Setup JDK 17
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '17'
+          server-id: github
+          settings-path: ${{ github.workspace }}
+
+      - if: matrix.language == 'java-kotlin'
         name: Build project
         run: ./mvnw package
