ci: :construction_worker: analyze repo with codeql

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -49,3 +49,8 @@ jobs:
       - if: matrix.language == 'java-kotlin'
         name: Build project
         run: ./mvnw package
+
+      - name: Analyze with CodeQL
+        uses: github/codeql-action/analyze@v3
+        with:
+          languages: ${{ matrix.language }}
