ci: :construction_worker: set matrix explicitly to pass in language
This is already available as a default value to this analyze action. Adding explictly per interviewer's request

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -53,4 +53,7 @@ jobs:
       - name: Analyze with CodeQL
         uses: github/codeql-action/analyze@v3
         with:
-          languages: ${{ matrix.language }}
+          # matrix is imlicitly available to all steps in the job
+          # it is included explicitly here for demonstration purposes
+          # per interviewer's request
+          matrix: ${{ toJson(matrix) }}
