--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -48,7 +48,7 @@ jobs:
 
       - if: matrix.language == 'java-kotlin'
         name: Build project
-        run: ./mvnw package -f ./backend/pom.xml
+        run: mvn package -f ./backend/pom.xml
 
       - name: Analyze with CodeQL
         uses: github/codeql-action/analyze@v3
