--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.data.mongodb.database=sorriso
+spring.data.mongodb.uri=mongodb://bramiller:E8td?yxrX9qGT?L$@docdb-2024-03-11-01-48-03.cx49v3dubmt6.us-east-1.docdb.amazonaws.com:27017/?tls=true&tlsCAFile=global-bundle.pem&retryWrites=false
+server.port=8000
