refactor: :bricks: switch from aws to mongodb atlas

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.data.mongodb.database=sorriso
-spring.data.mongodb.uri=mongodb://bramiller:E8td?yxrX9qGT?L$@docdb-2024-03-11-01-48-03.cx49v3dubmt6.us-east-1.docdb.amazonaws.com:27017/?tls=true&tlsCAFile=global-bundle.pem&retryWrites=false
+spring.data.mongodb.uri=mongodb+srv://thisisbramiller:$$YqodQR7FjhCymL@cluster0.yweyezb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 server.port=8000
