--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: java  -cp target/classes:target/dependency/* com.thisisbramiller.sorriso.SorrisoApplication
+web: java  -cp target/classes:target/dependency/* com.thisisbramiller.sorriso.SorrisoApplication --port $PORT
