--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: java  -cp target/classes:target/dependency/* com.thisisbramiller.sorriso.SorrisoApplication --Dserver.port $PORT
+web: java -cp target/classes:target/dependency/* com.thisisbramiller.sorriso.SorrisoApplication -Dserver.port=$PORT
