ci: :sparkles: ignore code scanning on root directory and on readme files

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -3,8 +3,14 @@ name: CodeQL
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - '**/README.md'
+      - '*'
   pull_request:
     branches: [ main ]
+    paths-ignore:
+      - '**/README.md'
+      - '*'
 
 jobs:
   scan:
