ci: :sparkles: get list all paths

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -25,6 +25,12 @@ jobs:
           with:
             fetch-depth: 0
 
+        - name: Get all paths
+          if: ${{ github.event_name == 'pull_request' }}
+          id: get-all-paths
+          run: |
+            echo "::set-output name=all-paths::$(./.github/scripts/list-all-paths)"
+
   scan:
     name: Analyze code with CodeQL
     runs-on: ubuntu-latest
