--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -59,6 +59,8 @@ jobs:
       - name: Get changed paths
         if: ${{ github.event_name == 'pull_request' }}
         id: get-changed-paths
+        env: 
+          PYTHONUNBUFFERED: "1"
         run: |
             git diff --name-only ${{ github.event.before }} ${{ github.event.after }} > ./.github/scripts/diff.txt
             echo "::set-output name=changed-paths::$(./.github/scripts/list-changed-paths)"
