--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -75,7 +75,7 @@ jobs:
           echo "::notice::Matrix values set to $ALL_PATHS$CHANGED_PATHS"
 
   scan:
-    name: "Analyze ${{matrix.languages}} with CodeQL: ${{matrix.target-dir}}"
+    name: "Analyze ${{matrix.include.languages}} with CodeQL: ${{matrix.include.target-dir}}"
     needs: find-paths-with-changes
     runs-on: ubuntu-latest
     timeout-minutes: 360
