--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -71,11 +71,11 @@ jobs:
           ALL_PATHS: ${{ steps.get-all-paths.outputs.all-paths }}
           CHANGED_PATHS: ${{ steps.get-changed-paths.outputs.changed-paths }}
         run: |
-          echo "::set-output name=dynamicmatrix::$ALL_PATHS$CHANGED_PATHS"
+          echo "::set-output name=matrix::$ALL_PATHS$CHANGED_PATHS"
           echo "::notice::Matrix values set to $ALL_PATHS$CHANGED_PATHS"
 
   scan:
-    name: "Analyze ${{dynamicmatrix.languages}} with CodeQL: ${{dynamicmatrix.target-dir}}"
+    name: "Analyze ${{matrix.languages}} with CodeQL: ${{matrix.target-dir}}"
     needs: find-paths-with-changes
     runs-on: ubuntu-latest
     timeout-minutes: 360
