--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -81,7 +81,7 @@ jobs:
         if: ${{ (matrix.languages == 'cpp' || matrix.languages == 'csharp') }}
         uses: github/codeql-action/autobuild@v3
 
-      - name: Manual Build
+      - name: Install Java
         if: matrix.languages == 'java'
         uses: actions/setup-java@v4
         with:
