--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -17,7 +17,7 @@ jobs:
     name: Find paths with changes
     runs-on: ubuntu-latest
     outputs:
-      matrix: ${{ steps.set-matrix-values.outputs.matrix }} 
+      matrix: ${{steps.set-matrix-values.outputs.matrix}} 
 
     steps:
       - name: Checkout repository
@@ -25,31 +25,6 @@ jobs:
         with:
           fetch-depth: 0
           
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-      - name: Dump job context
-        env:
-          JOB_CONTEXT: ${{ toJson(job) }}
-        run: echo "$JOB_CONTEXT"
-      - name: Dump steps context
-        env:
-          STEPS_CONTEXT: ${{ toJson(steps) }}
-        run: echo "$STEPS_CONTEXT"
-      - name: Dump runner context
-        env:
-          RUNNER_CONTEXT: ${{ toJson(runner) }}
-        run: echo "$RUNNER_CONTEXT"
-      - name: Dump strategy context
-        env:
-          STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-        run: echo "$STRATEGY_CONTEXT"
-      - name: Dump matrix context
-        env:
-          MATRIX_CONTEXT: ${{ toJson(matrix) }}
-        run: echo "$MATRIX_CONTEXT"
-
       - name: Get all paths
         if: ${{ github.event_name != 'pull_request' }}
         id: get-all-paths
@@ -78,50 +53,48 @@ jobs:
     name: "Analyze ${{matrix.languages}} with CodeQL: ${{matrix.target-dir}}"
     needs: find-paths-with-changes
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix: ${{ fromJson(needs.find-paths-with-changes.outputs.matrix) }}
     timeout-minutes: 360
     permissions:
-      # normally contents and actions permissions are required for private repositories, however, it commented out for demonstration purposes on a public repositories
-      # contents: read
-      # actions: write
       security-events: write
-
-    strategy:
-      # fail-fast is true by default, but it's included here for demonstration purposes and request for explicit notation from the interviewer
-      fail-fast: true
-      matrix:
-        language: [ 'java-kotlin', 'javascript-typescript' ]
-    
+      
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      - name: Generate CodeQL config file
+        env:
+          TARGET_DIR: ${{ matrix.target-dir }}
+        run: |
+          cp .github/codeql/codeql-config-template.yml codeql-config.yml
+          sed -i 's|TARGET_DIR|'${TARGET_DIR}'|g' codeql-config.yml
+
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
-          languages: ${{ matrix.language }}
-        
-      # Here I have an opprotunity to use the autobuild functionality provided by GitHub
-      # and build the project based on the language provided in the matrix. However, in 
-      # respects to the request to use explicit notation, I will not include the autobuild
-      # step and opt to build manually in the next step. This would also allow us to have
-      # more control over the build process.
+          config-file: codeql-config.yml
+          languages: ${{ matrix.languages }}
 
-      - if: matrix.language == 'java-kotlin'
-        name: Setup JDK 17
-        uses: actions/setup-java@v2
+      - name: Attempting Autobuild
+        if: ${{ (matrix.languages == 'cpp' || matrix.languages == 'csharp') }}
+        uses: github/codeql-action/autobuild@v3
+
+      - name: Install Java
+        if: matrix.languages == 'java-kotlin'
+        uses: actions/setup-java@v4
         with:
           distribution: 'adopt'
           java-version: '17'
           server-id: github
-          settings-path: ${{ github.workspace }}
+          settings-path: ${{ github.workspace}}
 
-      - if: matrix.language == 'java-kotlin'
+      - if: matrix.languages == 'java-kotlin'
         name: Build project
-        run: mvn package -f ./backend/pom.xml
+        run: mvn package -f ${{matrix.target-dir}}/pom.xml
 
       - name: Analyze with CodeQL
         uses: github/codeql-action/analyze@v3
         with:
-          # matrix is imlicitly available to all steps in the job
-          # it is included explicitly here for demonstration purposes
-          # per interviewer's request
           matrix: ${{ toJson(matrix) }}
